# PC_semestralka2

./: CMakeLists.txt  component_finder.c  component_finder.h  console_input.c  console_input.h  edges_io.c  edges_io.h  edges_reader.c  edges_reader.h  graph.c  graph.h  kruskal_mst.c  kruskal_mst.h  main.c  mrn.c  mrn.h  mst.c  mst.h  nodes_io.c  nodes_io.h  nodes_reader.c  nodes_reader.h  reader_utils.c  reader_utils.h  write_edges.c  write_edges.h
TEST/: e.csv  kruskal1_e.csv  kruskal1_n.csv  kruskal2_e.csv  kruskal3_e.csv  kruskal3_n.csv  n.csv  test.csv  test_e.csv
TEST/mrn/: nodes.csv
algo/: component_finder.c  component_finder.h  graph.c  graph.h  kruskal_mst.c  kruskal_mst.h  mrn.c  mrn.h  mst.c  mst.h
io/: edges_io.c  edges_io.h  nodes_io.c  nodes_io.h
